<resources>
    <string name="app_name">Woo</string>
    <string name="txt_Tagline">YOU  KNOW  WHEN  ITS  RIGHT</string>
    <string name="txt_signin">sign-in with phone number</string>
    <string name="txt_woo">WOO</string>
    <string name="txt_the_dating_app">THE DATING APP WOMEN LOVE</string>
    <string name="txt_private">PRIVATE</string>
    <string name="txt_secure">+ SECURE</string>
    <string name="txt_meaningful">+ MEANINGFUL</string>
    <string name="txt_we_put">We put women first.</string>
    <string name="txt_we_never">We NEVER post to Facebook ever.</string>
    <string name="txt_signinfacebook">SIGN IN WITH FACEBOOK</string>
    <string name="txt_by_tapping">By tapping Sign in, you agree with our Privacy &amp; Terms.</string>

    <!-- Mobile No TextView Or Hint -->
    <string name="txt_enter_mob">Enter Mobile No</string>
    <string name="hint_yourNo">Your mobile number</string>
    <string name="txt_proceed">Proceed</string>

    <!-- My Name TextView Fname Lname EditText Activity -->
    <string name="my_name_txt">My Name</string>
    <string name="next">NEXT &gt;</string>
    <string name="fname_hint">First Name (mandatory) </string>
    <string name="lname_hint">Last Name (optional) </string>
    <string name="text_to_protect">To protect your privacy, we only show initials for Women and First Name for Men</string>

    <!-- My Gender TextView Male Female Activity -->
    <string name="txt_my_gender">My Gender</string>
    <string name="txt_I_am_a_man">I am a Man</string>
    <string name="txt_I_am_a_woman">I am a Woman</string>
    <string name="txt_back"> &lt; BACK</string>

    <!-- My Birthday TextView EditText Activity -->
    <string name="txt_my_birthday">My Birthday</string>
    <string name="hint_DD">DD</string>
    <string name="hint_MM">MM</string>
    <string name="hint_YYYY">YYYY</string>
    <string name="txt_birthday_Description">Please enter your true date of birth here. it will help us find you best matches fast.</string>

    <!-- Add Picture  Activity -->
    <string name="txt_addpic_Description">Add your photos</string>
    <string name="txt_plus_sign">+</string>
    <string name="txt_please_review_our_tips">Please review our tips to make sure your pics are approved and get liked.</string>

    <!-- Relationship and Lifestyle Activity -->
    <string name="txt_relationship_and_lifestyle">Relationship and Lifestyle</string>
    <string name="txt_share">Share more about yourself to be discovered by the right people</string>
    <string name="txt_relationship">Relationship</string>
    <string name="txt_relationship_status">Relationship status (Select one)</string>
    <string name="txt_single">#Single +</string>
    <string name="txt_single_kids">#Single and with kids +</string>
    <string name="txt_divorced">#Divorced +</string>
    <string name="txt_divorced_kids">#Divorced and with Kids +</string>
    <string name="txt_widowed">#Widowed +</string>
    <string name="txt_widowed_kids">#Widowed and with Kids +</string>
    <string name="txt_separated">#Separated</string>
    <string name="txt_separated_kids">#Separated and with Kids +</string>

    <string name="txt_what">What are you looking for on Woo (Select one)</string>
    <string name="txt_relation">#Relationship +</string>
    <string name="txt_something_casual">#Something casual +</string>
    <string name="txt_do_not">#Do not know yet +</string>
    <string name="txt_marriage">#Marriage +</string>

    <string name="txt_lifestyle">Lifestyle Choices</string>
    <string name="txt_smoking">Smoking/Non Smoking (Select one)</string>
    <string name="txt_smoker">#Smoker +</string>
    <string name="txt_non_smoker">#Non-smoker +</string>
    <string name="txt_trying">#Trying to quit</string>

    <string name="txt_drinking">Drinking (Select one)</string>
    <string name="txt_drinks">#Drinks frequently +</string>
    <string name="txt_teetotaler">#Teetotaler</string>
    <string name="txt_social">#Social drinker +</string>

    <string name="txt_diet">Diet (Select one)</string>
    <string name="txt_vegetarian">#Vegetarian +</string>
    <string name="txt_vegan">#Vegan +</string>
    <string name="txt_non_vegetarian">#Non-vegetarian +</string>

    <string name="txt_workout">Workout (Select one)</string>
    <string name="txt_active">#Active +</string>
    <string name="txt_sometimes">#Sometimes +</string>
    <string name="txt_almost_never">#Almost never +</string>

    <!-- Choose interests Activity -->

    <string name="txt_choose_interests">Choose interests</string>
    <string name="txt_add_tags">Add tags that describe you best to meet like-minded people.</string>
    <string name="txt_add">Add at least 3 tags</string>

    <string name="text_ipl">IPL +</string>
    <string name="text_hip_hop">HipHop +</string>
    <string name="text_calligraphy">Calligraphy +</string>
    <string name="text_scuba_driving">ScubaDriving +</string>
    <string name="text_democrat">Democrat +</string>
    <string name="text_no_expense">NoExpenseTraveler +</string>
    <string name="text_football">Football +</string>
    <string name="text_sculpting">Sculpting +</string>
    <string name="text_hermit">Hermit +</string>
    <string name="text_dog_person">DogPerson +</string>
    <string name="text_stay_positive">StayPositive +</string>
    <string name="text_lesbian">Lesbian +</string>
    <string name="text_dance_machine">DanceMachine +</string>
    <string name="text_pottery">Pottery +</string>
    <string name="text_politically_incorrect">PoliticallyIncorrect +</string>
    <string name="text_rap_music">RapMusic +</string>
    <string name="text_classical_music">ClassicalMusic +</string>
    <string name="text_writing">Writing +</string>
    <string name="text_bowling">Bowling +</string>
    <string name="text_witty">Witty +</string>
    <string name="text_nature_walks">NatureWalks +</string>
    <string name="text_wanderlust">Wanderlust +</string>
    <string name="text_electronic">Electronic +</string>
    <string name="text_long_walks">LongWalks +</string>

    <!-- About Me Activity -->
    <string name="text_about_me">About Me</string>
    <string name="text_write_about_yourself">Write about yourself...</string>
    <string name="text_up_to_300">Upto 300</string>
    <string name="text_keep_it_clean">Keep it clean! No phone, messenger details, web links, abusive or explicit content please.</string>

    <!-- Search City Activity -->
    <string name="text_Search_city">Search City</string>
    <string name="text_set_browser">Set your browsing location. This can only be modified later if you give location permission is Settings.</string>
    <string name="tetx_my_location">My current location</string>
    <string name="text_top_cities"> Top cities</string>
    <string name="text_mumbai">Mumbai, Maharashtra</string>
    <string name="text_newDelhi">New Delhi, Delhi</string>
    <string name="text_pune">Pune, Maharashtra</string>
    <string name="text_bengaluru">Bengaluru, Karnataka</string>
    <string name="text_chennai">Chennai, Tamil Nadu</string>
    <string name="text_gurgaon">Gurgaon, Haryana</string>
    <string name="text_ahmedabad">Ahmedabad Gujarat</string>
    <string name="text_hyderabad">Hyderabad, Telangana</string>
    <string name="txt_discover">Discover</string>

</resources>